logs/synthetic_analysis_20250902_160633.log
2025-09-02 16:06:33,126 - INFO - Portfolio analysis logging started - 20250902_160633
2025-09-02 16:06:33,126 - INFO - Log file: logs/synthetic_analysis_20250902_160633.log
2025-09-02 16:06:33,126 - INFO - ================================================================================
2025-09-02 16:06:33,126 - INFO - COMPREHENSIVE PORTFOLIO ANALYSIS SYSTEM
2025-09-02 16:06:33,126 - INFO - ================================================================================
2025-09-02 16:06:33,126 - INFO - ✓ Fixed Income Portfolio: FRED rate data integration
2025-09-02 16:06:33,126 - INFO - ✓ Bond Portfolio: 50 loans + 100 bonds with FRED rate data
2025-09-02 16:06:33,126 - INFO - ✓ Scientific Risk Modeling: No random fallbacks
2025-09-02 16:06:33,126 - INFO - ✓ Enhanced Cashflow Export: Detailed breakdowns with timestamps
2025-09-02 16:06:33,126 - INFO - ================================================================================
2025-09-02 16:06:33,126 - INFO - 
============================================================
2025-09-02 16:06:33,126 - INFO - 1. FIXED INCOME PORTFOLIO ANALYSIS
2025-09-02 16:06:33,127 - INFO - ============================================================
2025-09-02 16:06:33,129 - ERROR - ❌ CRITICAL ERROR in portfolio analysis: expected an indented block after 'with' statement on line 231 (enriched_bond_portfolio.py, line 232)
2025-09-02 16:06:33,129 - ERROR - Full traceback:
2025-09-02 16:06:33,129 - ERROR - Traceback (most recent call last):
  File "/Users/xuling/PycharmProjects/pythonProject10/run_synthetic.py", line 75, in main
    from enriched_bond_portfolio import create_enhanced_bond_portfolio
  File "/Users/xuling/PycharmProjects/pythonProject10/enriched_bond_portfolio.py", line 232
    for line in f:
    ^^^
IndentationError: expected an indented block after 'with' statement on line 231

